<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PronunciaTEL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //***************Menu**************************

    //LABELS
    <string name="lblBienvenido">Hola </string>
    <string name="lblQueDeseaHacer">¿Que quieres hacer?</string>

    <string name="lblIngreseSuNombreHablado">Presiona el botón e ingresa tu nombre</string>

    <string name="lblIngresaTunombreEscrito">Escribe tu nombre en el cuadro</string>

    <string name="lblSeleccionActividad">Selecciona la actividad que quieres hacer</string>

    <string name="eliminar_modificar">Quieres eliminar o modificar el nombre?</string>

    <string name="EliminarNombre">Eliminar Nombre</string>

    <string name="ModificarNombre">Modificar Nombre</string>

    //BOTONES
    <string name="btnActividades">Actividades</string>
    <string name="btnPuntuaciones">Puntuaciones</string>
    <string name="btnNuevoNombreUsuario">Cambiar su Nombre</string>
    <string name="btnAyuda">Ayuda</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <string name="pronunciar">Pronunciar</string>

    <string name="actividadCuento">Cuentos</string>

    <string name="actividadAntonimos">Opuestos</string>

    //Acividades
    <string name="actividadImagen">Adivina la imagen</string>
    <string name="actividadPregunta">Preguntas</string>
    <string name="actividadLetras">Repasemos las letras</string>
    <string name="actividadPintar">Pinta</string>

    <string name="imagenInstruccion">Pulsa el botón y pronuncia el nombre de la imagen</string>

    <string name="hablaAhora">Habla ahora</string>
    <string name="puntos">Puntuacion: </string>
    <string name="continuar">Continuar</string>

    <string name="actividadPreguntas">Preguntas</string>
    <string name="instruccionPreguntas">Pulsa el botón cuando sepas la respuesta</string>
    <string name="preguntasCorrectas">Preguntas correctas: </string>

    <string name="escuchar">Escuchar</string>

    <string name="tituloCuentos">Cuentos</string>
    <string name="instruccionCuentos">Escucha o lee el cuento en el cuadro, y pulsa el botón para ver que recuerdas</string>

    <string name="tituloOpuestos">Palabras Opuestas</string>
    <string name="instruccionOpuestas">¿Puedes pronunciar la palabra opuesta de la que se muestra?</string>

    //PINTAR

    <string name="start_new">Nuevo</string>
    <string name="brush">Pincel</string>
    <string name="erase">Borrador</string>
    <string name="save">Guardar</string>
    <string name="cambiarColor">Cambiar el color del pincel</string>

    <string name="selectTono">Seleccion el tono del color</string>


    //puntuaciones
    <string name="puntuaciontitulo">Puntuaciones</string>

    //Letras
    <string name="letrasTitulo">Letras</string>
    <string name="instruccionLetras">¿Puedes seleccionar la letra que se reproduce?</string>

    //Cuentos
    <string name="EstoyListoCuentos">Estoy Listo</string>
    <string name="otroCuento">Otro Cuento</string>

    <string name="TituloPreguntasCuentos">Contesta las preguntas</string>
    <string name="contestar">Ya se la respuesta</string>

</resources>
