<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu3">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamLabelsTitulo"
        android:text="@string/actividadImagen"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margenSuperior"
        android:textStyle="bold"/>

    <ImageButton
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="right"
        android:background="@drawable/recargar"
        android:id="@+id/btnRecargarImagen"/>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:id="@+id/imageViewImagen"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/imagenesMargenTituloImagen"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamLabelsSubtitulo"
        android:text="@string/imagenInstruccion"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/imagenesMargenTituloImagen"
        android:id="@+id/lblInstruccion"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pronunciar"
        android:id="@+id/btnPronunciarImagen"
        android:drawableLeft="@drawable/boca"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="180dp"
            android:layout_height="fill_parent"
            android:text=""
            android:background="@android:color/transparent"
            android:id="@+id/btnAtrasImagenes"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text=""
            android:background="@android:color/transparent"
            android:id="@+id/btnPronunciarEjemploImagenes"/>



        </LinearLayout>





</LinearLayout>